[tool.poetry]
authors = ["Outvi V <oss+pypi@outv.im>"]
classifiers = [
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'License :: OSI Approved :: The Unlicense (Unlicense)',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Text Processing',
  'Topic :: Utilities',
]
description = "Build fcitx5/RIME dictionaries from MediaWiki sites"
homepage = "https://github.com/outloudvi/mw2fcitx/"
include = [
  'mw2fcitx/**/*.json',
]
license = "Unlicense"
name = "mw2fcitx"
package-mode = true
packages = [
  {include = "mw2fcitx"},
]
readme = "README.md"
repository = "https://github.com/outloudvi/mw2fcitx/"
version = "0.14.1"

[tool.poetry.scripts]
mw2fcitx = 'mw2fcitx.main:main'

[tool.poetry.dependencies]
OpenCC = "^1.1.7"
pypinyin = "^0.52.0.dev1"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
pytest = "^8.3.1"
yapf = "^0.40.2"
coverage = "^7.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.yapf]
based_on_style = "google"

[tool.coverage.run]
branch = true
omit = [
  "*/.venv/*",
]

[tool.coverage.html]
directory = "coverage_html_report"
